k8s/core/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: killhouse-system
  labels:
    app.kubernetes.io/part-of: killhouse
